# Workspace-Forge-Rust

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  novaforge.workspace.toml  workspace.sh
.github/workflows/: ci.yml
crates/editors/editor-animation/: Cargo.toml
crates/editors/editor-animation/src/: lib.rs  main.rs
crates/editors/editor-asset/: Cargo.toml
crates/editors/editor-asset/src/: lib.rs  main.rs
crates/editors/editor-build/: Cargo.toml
crates/editors/editor-build/src/: lib.rs  main.rs
crates/editors/editor-data/: Cargo.toml
crates/editors/editor-data/src/: lib.rs  main.rs
crates/editors/editor-gamefile/: Cargo.toml
crates/editors/editor-gamefile/src/: lib.rs  main.rs
crates/editors/editor-material/: Cargo.toml
crates/editors/editor-material/src/: lib.rs  main.rs
crates/editors/editor-scene/: Cargo.toml
crates/editors/editor-scene/src/: lib.rs  main.rs
crates/editors/editor-ui/: Cargo.toml
crates/editors/editor-ui/src/: lib.rs  main.rs
crates/editors/editor-viewport/: Cargo.toml
crates/editors/editor-viewport/src/: lib.rs
crates/editors/editor-vlogic/: Cargo.toml
crates/editors/editor-vlogic/src/: lib.rs  main.rs
crates/novaforge-ai/: Cargo.toml
crates/novaforge-ai/src/: lib.rs
crates/novaforge-build/: Cargo.toml
crates/novaforge-build/src/: lib.rs
crates/novaforge-editors/: Cargo.toml
crates/novaforge-editors/src/: main.rs
crates/novaforge-project/: Cargo.toml
crates/novaforge-project/src/: lib.rs
crates/novaforge-ui/: Cargo.toml
crates/novaforge-ui/src/: lib.rs
crates/novaforge-workspace/: Cargo.toml
crates/novaforge-workspace/src/: main.rs
docs/: building.md  editor-guide.md
