[package]
name        = "novaforge-ai"
description = "AI broker trait and stub implementation for NovaForge Workspace"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
futures = { workspace = true }
