[package]
name        = "novaforge-build"
description = "Build pipeline integration for NovaForge Workspace"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
novaforge-project = { workspace = true }
