[package]
name        = "novaforge-workspace"
description = "NovaForge Workspace — launcher shell"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[[bin]]
name = "novaforge-workspace"
path = "src/main.rs"

[dependencies]
egui             = { workspace = true }
eframe           = { workspace = true }
novaforge-project = { workspace = true }
novaforge-build  = { workspace = true }
