[package]
name        = "editor-build"
description = "Build Tool panel for NovaForge Workspace"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[features]
standalone = ["eframe"]

[dependencies]
egui              = { workspace = true }
novaforge-ui      = { workspace = true }
novaforge-build   = { workspace = true }
eframe            = { workspace = true, optional = true }

[[bin]]
name              = "editor-build"
path              = "src/main.rs"
required-features = ["standalone"]
