[package]
name        = "editor-data"
description = "Data Table Editor panel for NovaForge Workspace"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[features]
standalone = ["eframe"]

[dependencies]
egui         = { workspace = true }
novaforge-ui = { workspace = true }
serde        = { workspace = true }
toml         = { workspace = true }
eframe       = { workspace = true, optional = true }

[[bin]]
name              = "editor-data"
path              = "src/main.rs"
required-features = ["standalone"]
