[package]
name        = "editor-viewport"
description = "wgpu-backed 3-D viewport for the NovaForge Scene Editor"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
egui      = { workspace = true }
egui-wgpu = { workspace = true }
wgpu      = { workspace = true }
bytemuck  = { workspace = true }
